--- a/templates/head.mjml
+++ b/templates/head.mjml
@@ -4,9 +4,11 @@
   <mj-breakpoint width="599px" />
   <mj-attributes>
     <mj-all font-family="arial" ico-font-family="arial" font-size="15px" color="#555555" line-height="18px" />
-    <mj-section padding="0 25px">
-    <mj-wrapper padding="0 25px">
-    <mj-text padding-bottom="15px" padding-top="0" padding-left="0" padding-right="0" />
+    <mj-section padding="0" />
+    <mj-image padding="0" />
+    <mj-column padding="25px" />
+    <mj-wrapper padding="0 50px" />
+    <mj-text padding="0 0 15px" padding-top="0" padding-bottom="15px" padding-left="0" padding-right="0" />
   </mj-attributes>
   <mj-html-attributes>
     <mj-selector path=".list table table">
