--- a/index.mjml
+++ b/index.mjml
@@ -1,8 +1,8 @@
 <mjml>
   <mj-include path="./templates/head.mjml">
-  <mj-body>
+  <mj-body width="610px">
     <mj-section padding-bottom="0" padding-top="25px" background-color="#FFFFFF">
-      <mj-column>
+      <mj-column padding="0 0 25px">
         <mj-image src="./images/hero.png" alt="Save the date, for the Servier Speaker Program" />
         <mj-text padding-top="28px">Dear [Dr {Last Name} OR Healthcare Professional,</mj-text>
         <mj-text padding-bottom="0">We’re excited to share the latest speaker presentations for APHON 2023. Set a reminder for the following Servier events.</mj-text>
@@ -11,40 +11,48 @@
     <mj-wrapper>
       <mj-section>
         <mj-column background-color="#EBEBF9">
-          <mj-text>Non-NCPD Innovation Showcase: Deplete to Defeat: Asparagine Depletion in T-Cell ALL</mj-text>
-          <mj-text>Presented by Katherine Mason, MSN, APRN, PNP-PC, CPHON</mj-text>
-          <mj-text>Friday, September 22, 2023</mj-text>
-          <mj-text>7:10 AM – 7:40 AM ET</mj-text>
-          <mj-text>Huntington Convention Center of Cleveland</mj-text>
-          <mj-text>This presentation will overview T-cell ALL as well as its treatment in pediatric and young adult patients.</mj-text>
-          <mj-button background-color="#D44233" color="white">Learn More</mj-button>
+          <mj-text color="#24226A" font-weight="bold" font-size="18px" line-height="22px">Non-NCPD Innovation Showcase: Deplete to Defeat: Asparagine Depletion in T-Cell ALL</mj-text>
+          <mj-text color="#142D51">Presented by Katherine Mason, MSN, APRN, PNP-PC, CPHON</mj-text>
+          <mj-social font-size="14px" icon-size="30px" mode="horizontal" align="left" padding="0" text-padding="0 5px">
+            <mj-social-element src="./images/cal.png" icon-size="17px">Friday, September 22, 2023</mj-social-element>
+          </mj-social>
+          <mj-social font-size="14px" icon-size="30px" mode="horizontal" align="left" padding="0" text-padding="0 5px">
+            <mj-social-element src="./images/clock.png" icon-size="17px">7:10 AM – 7:40 AM ET</mj-social-element>
+          </mj-social>
+          <mj-social font-size="14px" icon-size="30px" mode="horizontal" align="left" padding="0" text-padding="0 5px">
+            <mj-social-element src="./images/location.png" icon-size="17px">Huntington Convention Center of Cleveland</mj-social-element>
+          </mj-social>
+          <mj-text padding-top="15px" font-size="14px">This presentation will overview T-cell ALL as well as its treatment in pediatric and young adult patients.</mj-text>
+          <mj-button background-color="#D44233" color="white" align="left" padding-left="0" width="169px">Learn More</mj-button>
         </mj-column>
       </mj-section>
     </mj-wrapper>
     <mj-wrapper>
-      <mj-section>
+      <mj-section padding-top="25px">
         <mj-column background-color="#EBEBF9">
-          <mj-text>Non-NCPD Lunch Symposium: Managing Allergic and Non-Allergic Asparaginase Reactions: A Case-Based Approach</mj-text>
-          <mj-text>Presented by Kelly Garvin, MA, BSN, RN, OCN
+          <mj-text color="#24226A" font-weight="bold" font-size="18px" line-height="22px">Non-NCPD Lunch Symposium: Managing Allergic and Non-Allergic Asparaginase Reactions: A Case-Based Approach</mj-text>
+          <mj-text color="#142D51">Presented by Kelly Garvin, MA, BSN, RN, OCN
           and Jillian Greenstein, BSN, RN</mj-text>
-          <mj-text>Friday, September 22, 2023</mj-text>
-          <mj-text>12:30 PM – 1:30 PM ET</mj-text>
-          <mj-text>Hope Ballroom</mj-text>
-          <mj-text>This presentation will discuss how to differentiate and monitor for allergic and non-allergic reactions in patients treated with asparaginase therapy.</mj-text>
-          <mj-button background-color="#D44233" color="white">Learn More</mj-button>
+          <mj-social font-size="14px" icon-size="30px" mode="horizontal" align="left" padding="0" text-padding="0 5px">
+            <mj-social-element src="./images/cal.png" icon-size="17px">Friday, September 22, 2023</mj-social-element>
+          </mj-social>
+          <mj-social font-size="14px" icon-size="30px" mode="horizontal" align="left" padding="0" text-padding="0 5px">
+            <mj-social-element src="./images/clock.png" icon-size="17px">12:30 PM – 1:30 PM ET</mj-social-element>
+          </mj-social>
+          <mj-social font-size="14px" icon-size="30px" mode="horizontal" align="left" padding="0" text-padding="0 5px">
+            <mj-social-element src="./images/location.png" icon-size="17px">Hope Ballroom</mj-social-element>
+          </mj-social>
+          <mj-text padding-top="15px" font-size="14px">This presentation will discuss how to differentiate and monitor for allergic and non-allergic reactions in patients treated with asparaginase therapy.</mj-text>
+          <mj-button background-color="#D44233" color="white" align="left" padding-left="0" width="169px">Learn More</mj-button>
         </mj-column>
       </mj-section>
     </mj-wrapper>
-    <mj-section>
-      <mj-column>
-        <mj-text align="center" font-weight="bold" color="#24226A">
-        To learn more about Servier Pharmaceuticals, visit <a href="https://servier.us/">servier.us</a>.
+    <mj-section padding="0">
+      <mj-column padding-bottom="15px">
+        <mj-text align="center" font-size="16px" font-weight="bold" color="#24226A" padding-bottom="25px">
+        To learn more about Servier Pharmaceuticals, visit <a href="https://servier.us/" style="color:#D44233; text-decoration:underline; font-weight:bold">servier.us</a>.
         </mj-text>
-      </mj-column>
-    </mj-section>
-    <mj-section>
-      <mj-column>
-        <mj-image width="175px" src="./images/logo-servier.png"></mj-image>
+        <mj-image width="150px" align="left" padding-left="0" padding-top="0" padding-bottom="0" src="./images/logo-servier.png"></mj-image>
       </mj-column>
     </mj-section>
     <mj-include path="./templates/footer.mjml">
