--- a/templates/footer.mjml
+++ b/templates/footer.mjml
@@ -1,7 +1,8 @@
-<mj-section padding-top="0" padding-bottom="0px" background-color="#FFFFFF">
-  <mj-column>
-    <mj-text mj-class="small" padding-top="3px" font-size="10px" line-height="13px">
+<mj-section background-color="#FFFFFF">
+  <mj-column padding-top="0" padding-bottom="5px">
+    <mj-text mj-class="small" padding-top="0" font-size="10px" line-height="13px">© 2023 Servier Pharmaceuticals LLC. 200 Pier Four Blvd, Boston, MA 02210. Customer Service: 1-800-807-6124. 
+Servier and the Servier Logo are registered trademarks of LES LABORATOIRES SERVIER.<br>
       {{veevaCode}}&nbsp;&nbsp;{{veevaDate}}
-    </mj-text>
+  </mj-text>
   </mj-column>
 </mj-section>
