--- a/templates/head.mjml
+++ b/templates/head.mjml
@@ -1,13 +1,13 @@
 <mj-head>
   <mj-title>{{title}}</mj-title>
   <mj-preview>{{title}}</mj-preview>
-  <mj-breakpoint width="599px" />
+  <mj-breakpoint width="609px" />
   <mj-attributes>
     <mj-all font-family="arial" ico-font-family="arial" font-size="15px" color="#555555" line-height="18px" />
     <mj-section padding="0" />
     <mj-image padding="0" />
-    <mj-column padding="25px" />
-    <mj-wrapper padding="0 50px" />
+    <mj-column padding="20px 25px" />
+    <mj-wrapper padding="0 25px" />
     <mj-text padding="0 0 15px" padding-top="0" padding-bottom="15px" padding-left="0" padding-right="0" />
   </mj-attributes>
   <mj-html-attributes>
@@ -30,7 +30,6 @@
       -ms-text-size-adjust: 100%;
       margin: 0;
       padding: 0;
-      max-width: 600px;
       margin: auto;
     }
   </mj-style>
