--- a/templates/footer.mjml
+++ b/templates/footer.mjml
@@ -1,8 +1,8 @@
 <mj-section background-color="#FFFFFF">
   <mj-column padding-top="0" padding-bottom="5px" padding-left="0" padding-right="0">
     <mj-text font-weight="bold" font-size="10px">This email was sent by a third-party vendor. Please do not reply to this email.</mj-text>
-      <mj-image href="https://www.servier.us" width="170px" align="left" padding-top="0" padding-bottom="10px" src="./images/logo-servier.png"></mj-image>
-        <mj-text mj-class="small" padding-top="0" font-size="10px" line-height="13px">© 2023 Servier Pharmaceuticals LLC. 200 Pier Four Blvd, Boston, MA 02210. Customer Service: 1-800-807-6124. 
+      <mj-image href="https://servier.us/" width="170px" align="left" padding-top="0" padding-bottom="10px" src="./images/logo-servier.png"></mj-image>
+        <mj-text mj-class="small" padding-top="0" font-size="10px" line-height="13px">© 2023 Servier Pharmaceuticals LLC. 200 Pier Four Blvd, Boston, MA 02210. Customer Service: <a href="#" style="color:#555555;text-decoration:none;">1-800-807-6124</a>. 
 Servier and the Servier Logo are registered trademarks of LES LABORATOIRES SERVIER.<br>
       {{veevaCode}}&nbsp;&nbsp;{{veevaDate}}
     </mj-text>
