--- a/templates/footer.mjml
+++ b/templates/footer.mjml
@@ -1,10 +1,20 @@
-<mj-section background-color="#FFFFFF">
-  <mj-column padding-top="0" padding-bottom="5px" padding-left="0" padding-right="0">
-    <mj-text font-weight="bold" font-size="10px">This email was sent by a third-party vendor. Please do not reply to this email.</mj-text>
-      <mj-image href="https://servier.us/" width="170px" align="left" padding-top="0" padding-bottom="10px" src="./images/logo-servier.png"></mj-image>
-        <mj-text mj-class="small" padding-top="0" font-size="10px" line-height="13px">© 2023 Servier Pharmaceuticals LLC. 200 Pier Four Blvd, Boston, MA 02210. Customer Service: <a href="#" style="color:#555555;text-decoration:none;">1-800-807-6124</a>. 
-Servier and the Servier Logo are registered trademarks of LES LABORATOIRES SERVIER.<br>
-      {{veevaCode}}&nbsp;&nbsp;{{veevaDate}}
-    </mj-text>
-  </mj-column>
-</mj-section>
+<mj-wrapper>
+  <mj-section vertical-align="middle" full-width="full-width" background-color="#FBF6F4">
+    <mj-column vertical-align="middle" padding-bottom="0px">
+      <mj-image src="./images/mvp_logo.png" alt="MVP Logo" padding-top="25px" padding-bottom="0px" padding-right="150px" padding-left="150px"></mj-image>
+    </mj-column>
+  </mj-section>
+  <mj-section background-color="#FBF6F4" padding-top="0px">
+    <mj-column vertical-align="middle" padding-bottom="0px">
+      <mj-text align="center" padding-left="55px" padding-right="55px" color="#1E143E" padding-bottom="15px" font-size="15px"><em>MVP is a non-profit organization and movement dedicated to helping young people of color in their education, leadership, and early proffesional careers.</em>
+      </mj-text>
+      <mj-divider border-width="2px" border-color="#FF8020" padding-right="20px" padding-left="20px" padding-bottom="15px"></mj-divider>
+      <mj-text align="center" padding-left="5px" padding-right="5px" color="#222222" padding-bottom="0px" font-size="12px">
+      MVP: Momentum and Value for People of Color | 43 Hilltop Rd, Kinnelon, NJ 07405<br>
+      <u>Unsubscribe {recipient's email}</u><br>
+      <u>Our Privacy Policy | Constant Contact Data Notice</u><br>
+      Sent by mvp.mvpoc@gmail.com
+      </mj-text>
+    </mj-column>
+  </mj-section>
+</mj-wrapper>
