--- a/templates/head.mjml
+++ b/templates/head.mjml
@@ -18,7 +18,8 @@
       <mj-html-attribute name="role">presentation</mj-html-attribute>
     </mj-selector>
   </mj-html-attributes>
-  <mj-style inline="inline">.rounded > table { border-collapse:separate; border-radius: 50px; }
+  <mj-style inline="inline">
+    .rounded { border-collapse: separate; border-radius: 50px; border: 3px solid #FF8020; background-color: #FFF4DF; }
   </mj-style>
   <mj-style>
     html, body {
@@ -31,5 +32,6 @@
       margin: 0;
       padding: 0;
       margin: auto;
+    }
   </mj-style>
 </mj-head>
