--- a/index.mjml
+++ b/index.mjml
@@ -1,7 +1,7 @@
 <mjml>
   <mj-include path="./templates/head.mjml">
   <mj-body width="610px">
-    <mj-section vertical-align="middle" background-color="#FFF4DF">
+    <mj-section background-color="#FFF4DF">
       <mj-column width="50%" vertical-align="middle">
         <mj-image src="./images/mvp_logo.png" alt="MVP Logo" padding-bottom="25px" padding-top="25px"></mj-image>
       </mj-column>
@@ -11,7 +11,7 @@
     </mj-section>
     <mj-wrapper background-color="#FFE085">
       <mj-section>
-        <mj-column background-color="#FFE085" full-width="full-width">
+        <mj-column background-color="#FFE085">
           <mj-text padding-top="10px" padding-left="15px" padding-right="15px">Dear <span style="color:#FF00EB">[first name, Last name],</span></mj-text>
           <mj-text padding-bottom="0" padding-left="15px" padding-right="15px" padding-bottom="20px">You are invited to a very special event with MVP: Momentum and Value for People of Color! At <span style="color:#FF00EB">[event name]</span>, we will keep up our momentum by <span style="color:#FF00EB">[hosting a variety of fun activities]</span> and <span style="color:#FF00EB">[recognizing our generous donors]</span>. Please join us for an inspiring <span style="color:#FF00EB">[day/night]</span> as we help create equity and access to opportunity for young people of color!</mj-text>
         </mj-column>
@@ -20,34 +20,108 @@
     <mj-wrapper padding="25px" background-color="#FFE085">
       <mj-section padding="25px" css-class="rounded">
         <mj-group>
-          <mj-column>
-            <mj-social icon-size="25px" align="left">
-              <mj-social-element src="./images/calendar-icon.png" icon-size="45%" padding-right="25px"></mj-social-element>
-            </mj-social>
+          <mj-column vertical-align="top" width="60px">
+            <mj-image src="./images/calendar-icon.png" width="34px" alt="Calendar icon" />
           </mj-column>
-          <mj-column>
-            <mj-text>Date: </mj-text>
+          <mj-column vertical-align="top" width="90px" >
+            <mj-text align="left">Date: </mj-text>
           </mj-column>
-          <mj-column padding-left="25px">
-            <mj-text><span style="color:#FF00EB">[00:00:0000]</span></mj-text>
+          <mj-column vertical-align="top">
+            <mj-text align="left" color="#FF00EB">[00:00:0000]</mj-text>
           </mj-column>
         </mj-group>
       </mj-section>
+
       <mj-section>
-        <mj-group>
-        <mj-section>
-          <mj-column>
-            <mj-button href="#" background-color="#1E143E" color="white" align="center" padding-left="0" width="180px" font-weight="bold" border-radius="8px">Register now &#8250;</mj-button>
-          </mj-column>
-        </mj-section>
-      </mj-wrapper>
-    </mj-section> 
+        <mj-column>
+          <mj-button href="#" background-color="#1E143E" color="white" align="center" padding-left="0" width="180px" font-weight="bold" border-radius="8px">Register now &#8250;</mj-button>
+        </mj-column>
+      </mj-section> 
+
       <mj-section>
         <mj-column background-color="#FFE085">
           <mj-text padding-top="15px" font-size="15px" padding-left="15px" padding-right="15px">We understand that you may not be able to participate, but if you are interested, you can become an event sponsor or donate to MVP.</mj-text>
           <mj-button href="#" background-color="#1E143E" color="white" align="center" padding-left="0" width="180px" font-weight="bold" border-radius="8px">Donate &#8250;</mj-button>
         </mj-column>
       </mj-section>
+  </mj-wrapper>
+
+  <mj-section background-color="white">
+    <mj-group>
+      <mj-column width="32%" background-color="red">
+        <mj-text>
+          Content 1
+        </mj-text>
+      </mj-column>
+      <mj-column width="32%" background-color="blue">
+        <mj-text>
+          Content 2
+        </mj-text>
+      </mj-column>
+      <mj-column width="32%" background-color="green">
+        <mj-text>
+          Content 3
+        </mj-text>
+      </mj-column>
+    </mj-group>
+  </mj-section>
+
+  <mj-wrapper padding="25px" background-color="#FFE085">
+    <mj-section padding="25px 25px 0px" css-class="rounded-top">
+    </mj-section>
+    <mj-section css-class="rounded-mid">
+      <mj-group>
+        <mj-column vertical-align="middle" width="30%" background-color="red">
+          <mj-image align="right" src="./images/calendar-icon.png" width="34px" alt="Calendar icon" />
+        </mj-column>
+        <mj-column vertical-align="middle" width="31%">
+          <mj-text align="left" font-size="15px" font-weight="bold" padding-top="10px">Date: </mj-text>
+        </mj-column>
+        <mj-column vertical-align="top" width="33%" background-color="green">
+          <mj-text align="left" color="#FF00EB" padding-top="10px">[00:00:0000]</mj-text>
+        </mj-column>
+      </mj-group>
+    </mj-section>
+    <mj-section css-class="rounded-mid">
+      <mj-group>
+        <mj-column vertical-align="middle" width="30%" background-color="red">
+          <mj-image align="right" src="./images/time-icon.png" width="31px" alt="Time icon" />
+        </mj-column>
+        <mj-column vertical-align="middle" width="31%">
+          <mj-text align="left" font-size="15px" font-weight="bold" padding-top="10px">Time: </mj-text>
+        </mj-column>
+        <mj-column vertical-align="top" width="33%" background-color="green">
+          <mj-text align="left" color="#FF00EB" padding-top="10px">[00:00 am/pm]</mj-text>
+        </mj-column>
+      </mj-group>
+    </mj-section>
+    <mj-section css-class="rounded-mid">
+      <mj-group>
+        <mj-column vertical-align="middle" width="30%" background-color="red">
+          <mj-image align="right" src="./images/location-icon.png" width="21px" alt="Location icon" />
+        </mj-column>
+        <mj-column vertical-align="middle" width="31%">
+          <mj-text align="left" font-size="15px" font-weight="bold" padding-top="10px">Location: </mj-text>
+        </mj-column>
+        <mj-column vertical-align="top" width="33%" background-color="green">
+          <mj-text align="left" color="#FF00EB" padding-top="10px">
+            [Street Address Line 1<br/> 
+            Street Address Line 2<br/> 
+            City, State Zip Code<br/> 
+            /Virtual]
+          </mj-text>
+        </mj-column>
+      </mj-group>
+    </mj-section>
+    <mj-section css-class="rounded-mid">
+      <mj-group>
+        <mj-column>
+        <mj-button href="#" background-color="#1E143E" color="white" align="center" padding-left="0" width="180px" font-weight="bold" border-radius="8px">Register now &#8250;</mj-button>
+      </mj-column>
+      </mj-group>
+    </mj-section>
+    <mj-section padding="25px 25px 0px" css-class="rounded-bottom">
+    </mj-section> 
   </mj-wrapper>
   <mj-include path="./templates/footer.mjml">
   </mj-body>
